--- a/about.html
+++ b/about.html
@@ -7,6 +7,6 @@
     <title>About</title>
 </head>
 <body>
-    <h2>I am groot I am groot</h2>
+    <h2>Hello! I am your student Rahel,nice meeting you</h2>
 </body>
 </html>
