--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My Git Project</title>
 </head>
 <body>
-    <h1>Hello, Git! I am Groot</h1>
+    <h1>Hello!</h1>
+    <h2>My name is Rahel an Ethiopian American student of yours! :D</h2>
 </body>
 </html>
